[project]
name = "reline"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "chainner-ext>=0.3.10",
    "moviepy==1.0.2",
    "opencv-python-headless>=4.11.0.86",
    "orjson>=3.10.15",
    "pepeline>=0.3.14",
    "resselt>=2,<3",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.4"
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
resselt = { index = "rewaifu" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "rewaifu"
url = "https://pypi.shd.llc/rewaifu/stable"
publish-url = "https://pypi.shd.llc/rewaifu/stable"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
