[project]
name = "reline"
version = "1.0.1"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "chainner-ext>=0.3.10",
    "moviepy==1.0.2",
    "opencv-python-headless>=4.11.0.86",
    "orjson>=3.10.15",
    "pepeline>=0.3.14",
    "resselt>=1,<2",
    "resr>=1,<2",
    "tqdm>=4.67.1",
    "typer>=0.15.4",
]

[dependency-groups]
dev = [
    "lefthook>=1.11.13",
    "ruff>=0.11.13",
]

[project.scripts]
reline = "reline.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
