[project]
name = "reline"
version = "1.2.3"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "moviepy==1.0.2",
    "opencv-python-headless>=4.11.0.86",
    "orjson>=3.10.15",
    "pepeline>=1.0.2",
    "resselt>=1,<2",
    "resr>=1,<2",
    "tqdm>=4.67.1",
    "typer>=0.15.4",
]

[dependency-groups]
dev = [
    "lefthook>=1.11.13",
    "ruff>=0.11.13",
]

[project.scripts]
reline = "reline.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 150
indent-width = 4
preview = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
quote-style = "single"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ['ALL']
fixable = ["ALL"]
ignore = ['ANN', 'COM812', 'CPY', 'D', "DOC", 'Q000', 'Q003', 'S101', 'PLR', 'FBT001', 'FBT002', 'PTH', 'FBT003']

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.uv.workspace]
members = [
    "venv",
]
